spacing fixes

--- a/custom.css
+++ b/custom.css
@@ -563,6 +563,10 @@ body.no-scroll {
   clip-path: polygon(0 0, 100% 11%, 100% 100%, 0 89%);
 }
 
+.info-container .section-title {
+  padding-bottom: 50px;
+}
+
 .logo-img {
   transform: scale(1.1);
 }
@@ -596,6 +600,10 @@ body.no-scroll {
   letter-spacing: 3px;
   text-align: center;
   font-family: 'Montserrat', Helveltica, Arial, sans-serif;
+}
+
+.title-3 {
+  padding-top: 50px;
 }
 
 .skill-card-container {
@@ -909,14 +917,15 @@ button[type="submit"] {
   margin: 0 0 5px;
   padding: 10px;
   font-size: 15px;
+  transition: background-color 0.5s ease-in-out;
 }
 
 button[type="submit"]:hover {
   background: var(--primaryColor);
   -webkit-transition: background 0.3s ease-in-out;
-  -webkit-transition: background-color 0.3s ease-in-out;
-  -o-transition: background-color 0.3s ease-in-out;
-  transition: background-color 0.3s ease-in-out;
+  -webkit-transition: background-color 0.5s ease-in-out;
+  -o-transition: background-color 0.5s ease-in-out;
+  transition: background-color 0.5s ease-in-out;
 }
 
 button[type="submit"]:active {
